--- a/orders.html
+++ b/orders.html
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-  <script type="module" src="data/orders.js"></script>
+  <script type="module" src="Scripts/orderr.js"></script>
   </body>
   
 </html>
